--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main     # main
+      - master     # main
       - 'dev-*'  # dev-new dev-this-is-new
       - 'feat/**' # feat/new feat/new/button
       # developer-1
